# trueLMAO

./: .gitignore  Cargo.toml  LICENSE  README.md  perf.data  perf.data.old  untitled1.L68  untitled1.S68
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/roms/: test.gen  titan-overdrive2.nfo  titan-overdrivemegademo-v1.1-final.nfo  vdp.inc  vga.inc
egui/: Cargo.toml
egui/src/: main.rs
emu/: Cargo.toml
emu/src/: debug.rs  frame_timer.rs  gfx.rs  io.rs  lib.rs  mem.rs  region.rs  rom.rs  vdp.rs  z80.rs
frontend/: .gitignore  Cargo.toml  README.md  build.sh  build_web.sh  publish.sh  setup_web.sh
frontend-minimal/: Cargo.toml  build.sh
frontend-minimal/src/: lib.rs
frontend-minimal/static/: app.js  frontend_minimal.js  frontend_minimal_bg.wasm  index.html
frontend/docs/: README.md  frontend.js  frontend_bg.wasm  index.html
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/debug/: cpu.rs  memory.rs  mod.rs  palette.rs  vram.rs
frontend/src/input/: mod.rs
frontend/src/widgets/: file-native.rs  file.rs  menu.rs  mod.rs  viewport.rs
frontend/static/: frontend.js  frontend_bg.wasm  index.html
notes/: cycles.txt  gen-hw.txt  notes
notes/2f/: sega2f.htm
notes/2f/sega2f_files/: filelist.xml  header.htm
notes/EASy68K/: EASy68K.url  Getting Started.txt  License.txt  help.chm  readme.txt  template.NEW  untitled1.L68  untitled1.S68
notes/EASy68K/Examples/: MACRO.X68  clockDigital.X68  clockWithSound.X68  fileio.X68  graphicSound.X68  mouseWindowSize.X68  tutorial1.X68  tutorial2.X68  tutorial3.X68  tutorial4.X68
notes/Regen0972D/: History.txt  ReadMe.txt  ram.dmp  ram.txt  ram2.dmp  regen.ini
notes/Regen0972D/Plugins/: interpolation.rpi  mdntsc.rpi  normal2x.rpi
notes/vdp/: index.html  pic_0.html  pic_1.html  pic_2.html  pic_3.html  pic_6.html  pic_7.html  pic_8.html  pic_c.html  pic_f.html
notes/vdp/pics/: FichierVisionneuse.jbf
res/: build.sh  cycles.txt  logo.asm_  notes  repl.js  s2.asm  s3p2bin  test.asm  test.asm.orig  test.hex  test.i64  tetris.md
res/asmblr/: test.asm  test.hex
res/vdp/: pic_4.html  pic_5.html  pic_9.html  pic_a.html  pic_b.html  pic_d.html  pic_e.html
src/: main.rs
src/console/: mod.rs
src/m68k/: mod.rs
src/opcodes/: mod.rs
src/ram/: mod.rs
src/rom/: mod.rs
src/ui/: #debug.glade#  debug.glade  debug.glade~  mod.rs
web/: Cargo.toml  build.sh  develop.sh  index.html  package.json
web/app/: main.js
web/frontend/: .eslintrc  .stylelintrc  .tern-project  package.json  webpack.config.js
web/frontend/app/: main.js
web/src/: lib.rs
web/static/: gamepad.js  index.html
(+9 files in other folders)
