[package]
name = "frontend"
default-run = "frontend_bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
emu = { path = "../emu" }

# rfd = "0.8"
# hqx = { git = "https://github.com/CryZe/wasmboy-rs", branch = "master" }

egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }
# serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
